--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -4,25 +4,43 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link href="https://cdn.jsdelivr.net/npm/flowbite@3.1.2/dist/flowbite.min.css" rel="stylesheet" />
     <link rel="stylesheet" th:href="@{/css/output.css}">
-    <!-- <style>
-        .container{
-            margin: auto;
-            width: 50%;
-            padding: 30px;
-            background-color: #e2e2e2;
-        }
-    </style> -->
 </head>
-<body>
-    <div class="text-2xl text-blue-500">
-        <h1 data-th-text="${name}"></h1>
-        <p>Description: <span data-th-text="${description}"></span></p>
-        <p>Current Date: <span data-th-text="${currentDate}"></span></p>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi, fugiat in, 
+<body class="bg-gray-100 flex flex-col gap-10 justify-center items-center min-h-screen">
+
+    <div class="bg-gray-200 w-1/2 flex flex-col p-6 rounded-lg shadow-md items-center gap-4">
+        <h1 class="text-2xl font-bold" data-th-text="${name}"></h1>
+        <p class="text-gray-600">Description: <span data-th-text="${description}"></span></p>
+        <p class="text-gray-600">Current Date: <span data-th-text="${currentDate}"></span></p>
+        <p class="text-gray-500">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi, fugiat in, 
             fugit numquam quidem maiores quos voluptatem qui dolores consectetur voluptatum sapiente, 
             et sunt error itaque. Necessitatibus quos voluptatum qui.
         </p>
+        <button class="bg-blue-700 px-3 py-2 rounded text-white hover:bg-blue-600 hover:scale-105 transition duration-200 ease-in-out">
+            Click here
+        </button>
     </div>
+
+    <!-- Flowbite content -->
+    <div class="max-w-sm p-6 bg-white border border-gray-200 rounded-lg shadow-sm dark:bg-gray-800 dark:border-gray-700">
+        <svg class="w-7 h-7 text-gray-500 dark:text-gray-400 mb-3" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 20 20">
+            <path d="M18 5h-.7c.229-.467.349-.98.351-1.5a3.5 3.5 0 0 0-3.5-3.5c-1.717 0-3.215 1.2-4.331 2.481C8.4.842 6.949 0 5.5 0A3.5 3.5 0 0 0 2 3.5c.003.52.123 1.033.351 1.5H2a2 2 0 0 0-2 2v3a1 1 0 0 0 1 1h18a1 1 0 0 0 1-1V7a2 2 0 0 0-2-2ZM8.058 5H5.5a1.5 1.5 0 0 1 0-3c.9 0 2 .754 3.092 2.122-.219.337-.392.635-.534.878Zm6.1 0h-3.742c.933-1.368 2.371-3 3.739-3a1.5 1.5 0 0 1 0 3h.003ZM11 13H9v7h2v-7Zm-4 0H2v5a2 2 0 0 0 2 2h3v-7Zm6 0v7h3a2 2 0 0 0 2-2v-5h-5Z"/>
+        </svg>
+        <a href="#">
+            <h5 class="mb-2 text-2xl font-semibold tracking-tight text-gray-900 dark:text-white">Need a help in Claim?</h5>
+        </a>
+        <p class="mb-3 font-normal text-gray-500 dark:text-gray-400">Go to this step by step guideline process on how to certify for your weekly benefits:</p>
+        <a href="#" class="inline-flex font-medium items-center text-blue-600 hover:underline">
+            See our guideline
+            <svg class="w-3 h-3 ms-2.5 rtl:rotate-[270deg]" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 18 18">
+                <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 11v4.833A1.166 1.166 0 0 1 13.833 17H2.167A1.167 1.167 0 0 1 1 15.833V4.167A1.166 1.166 0 0 1 2.167 3h4.618m4.447-2H17v5.768M9.111 8.889l7.778-7.778"/>
+            </svg>
+        </a>
+    </div>
+
+
+    <script src="https://cdn.jsdelivr.net/npm/flowbite@3.1.2/dist/flowbite.min.js"></script>
 </body>
 </html>
