--- a/src/main/resources/templates/base.html
+++ b/src/main/resources/templates/base.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" th:fragment="parent(content, title, script)" xmlns="th:https://www.thymeleaf.org">
+<html class="dark" lang="en" th:fragment="parent(content, title, script)" xmlns="th:https://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,10 +7,15 @@
     <link rel="stylesheet" th:href="@{/css/output.css}">
     <link href="https://cdn.jsdelivr.net/npm/flowbite@3.1.2/dist/flowbite.min.css" rel="stylesheet" />
 </head>
-<body>
+<body class="dark:bg-gray-900 dark:text-white">
+    <!-- common header -->
+     <div data-th-replace="navbar :: navbar"></div>
     <!-- main content -->
-     <section th:replace="${content}"></section>
-     <!-- flow bite content -->
+    <div class="p-4">
+        <section th:replace="${content}"></section>
+    </div>
+    <!-- flow bite content -->
+    <!-- common footer -->
     <script src="https://cdn.jsdelivr.net/npm/flowbite@3.1.2/dist/flowbite.min.js"></script>
     <script data-th-replace="${script}"></script>
 </body>
