--- a/src/main/resources/templates/contact.html
+++ b/src/main/resources/templates/contact.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html lang="en" th:replace="~{base :: parent(~{::#content}, ~{::title}, ~{::script})}">
 <head>
-    <title>Home Page</title>
+    <title>Contact Us Page</title>
 </head>
 <body>
     <div id="content">
-        <h1>Welcome to Home Page</h1>
+        <h1>Welcome to Contact Us Page</h1>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
     </div>
     <!-- Multiple Scrits passed -->
-    <script>console.log('Home page script');</script>
+    <script>console.log('Contact Us page script');</script>
     <script>console.log('Another script');</script>
 </body>
 </html>
