Implemented dark mode

--- a/src/main/resources/templates/navbar.html
+++ b/src/main/resources/templates/navbar.html
@@ -11,11 +11,15 @@
         class="h-8"
         alt="Flowbite Logo"
       />
-      <span class="self-center text-2xl font-semibold whitespace-nowrap dark:text-white"
+      <span class="self-center text-2xl font-semibold whitespace-nowrap dark:text-white text-gray-900"
         >SRC</span
       >
     </a>
     <div class="flex gap-2 md:order-2 space-x-3 md:space-x-0 rtl:space-x-reverse">
+      <button id="theme_change_button" class="bg-gray-200 hover:bg-gray-300 px-4 py-2 rounded-lg dark:bg-gray-600 dark:hover:bg-gray-700 ">
+        <i class="fa-solid fa-circle-half-stroke"></i>
+        <span>Light</span>
+      </button>
       <a
         data-th-href="@{'/login'}"
         type="button"
