--- a/src/main/resources/templates/base.html
+++ b/src/main/resources/templates/base.html
@@ -1,13 +1,17 @@
 <!DOCTYPE html>
-<html class="dark" lang="en" th:fragment="parent(content, title, script)" xmlns="th:https://www.thymeleaf.org">
+<html class="light" lang="en" th:fragment="parent(content, title, script)" xmlns="th:https://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title data-th-replace="${title}">SCM</title>
     <link rel="stylesheet" th:href="@{/css/output.css}">
     <link href="https://cdn.jsdelivr.net/npm/flowbite@3.1.2/dist/flowbite.min.css" rel="stylesheet" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" 
+        integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" 
+        crossorigin="anonymous" referrerpolicy="no-referrer" 
+    />
 </head>
-<body class="dark:bg-gray-900 dark:text-white">
+<body class="dark:bg-gray-900 dark:text-white bg-white text-gray-900">
     <!-- common header -->
      <div data-th-replace="navbar :: navbar"></div>
     <!-- main content -->
@@ -17,6 +21,7 @@
     <!-- flow bite content -->
     <!-- common footer -->
     <script src="https://cdn.jsdelivr.net/npm/flowbite@3.1.2/dist/flowbite.min.js"></script>
+    <script data-th-src="@{'/js/script.js'}"></script>
     <script data-th-replace="${script}"></script>
 </body>
 </html>
