--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -1,15 +1,34 @@
 <!DOCTYPE html>
-<html lang="en" th:replace="~{base :: parent(~{::#content}, ~{::title}, ~{::script})}">
-<head>
+<html
+  lang="en"
+  th:replace="~{base :: parent(~{::#content}, ~{::title}, ~{::script})}"
+>
+  <head>
     <title>Register Page</title>
-</head>
-<body>
+  </head>
+  <body>
     <div id="content">
-        <h1>Welcome to Register Page</h1>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+      <a
+        href="#"
+        class="block max-w-sm p-6 bg-white border border-gray-200 rounded-lg shadow-sm hover:bg-gray-100 dark:bg-gray-800 dark:border-gray-700 dark:hover:bg-gray-700"
+      >
+        <h5
+          class="mb-2 text-2xl font-bold tracking-tight text-gray-900 dark:text-white"
+        >
+          Noteworthy technology acquisitions 2021
+        </h5>
+        <p class="font-normal text-gray-700 dark:text-gray-400">
+          Here are the biggest enterprise technology acquisitions of 2021 so
+          far, in reverse chronological order.
+        </p>
+      </a>
     </div>
     <!-- Multiple Scrits passed -->
-    <script>console.log('Register page script');</script>
-    <script>console.log('Another script');</script>
-</body>
+    <script>
+      console.log("Register page script");
+    </script>
+    <script>
+      console.log("Another script");
+    </script>
+  </body>
 </html>
