--- a/src/main/resources/templates/base.html
+++ b/src/main/resources/templates/base.html
@@ -11,7 +11,7 @@
         crossorigin="anonymous" referrerpolicy="no-referrer" 
     />
 </head>
-<body class="dark:bg-gray-900 dark:text-white bg-white text-gray-900">
+<body class="dark:bg-gray-900 dark:text-white bg-gray-100 text-gray-900">
     <!-- common header -->
      <div data-th-replace="navbar :: navbar"></div>
     <!-- main content -->
